--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/index.ts",
     "prisma:generate": "npx prisma generate",
-    "prisma:migrate": "npx prisma migrate reset",
+    "prisma:migrate": "npx prisma migrate dev",
     "prisma:seed": "npx prisma db seed",
     "prisma:studio": "npx prisma studio",
-    "prisma:reset": "npm run prisma:migrate && npm run prisma:seed"
+    "prisma:reset": "npx prisma migrate reset"
   },
   "keywords": [],
   "author": "Peyton McKee",
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.4.1",
+    "cors": "^2.8.5",
     "eslint": "^8.50.0",
     "express": "^4.18.2",
     "prettier": "^3.0.3",
