--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "eslint": "^8.50.0",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "prettier": "^3.0.3",
     "prisma": "^5.4.1",
     "ts-node": "^10.9.1"
